--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
 						{% else %}
 						<li class="nav-link">
 						{% endif %}
-						<a class="mx-1" href="alldata/">data</a></li>
+						<a class="mx-1" href="/alldata/">data</a></li>
 						
 						{% if page.categories.first == 'blog' %}
 						<li class="nav-link active">
