updated index.html with more projects

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -47,7 +47,7 @@ figure {
 figcaption {
   display: run-in;
  // caption-side: bottom;
-  width: 300px;
+ // width: 300px;
   text-align: center;
  // max-width: 100%;
 }
